tooling/nargo_cli/tests/snapshots/execution_success/comptime_return_minus_one_as_i32/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub i32 {
    -1
}
